# MRLaserTag

./: .gitignore  Makefile  README.md  requirements.txt
src/model_tracker/: copy_driver.bat
src/model_tracker/vuforia_driver/: CMakeLists.txt  Info.plist  README.md  build.py  setenv.bat
src/model_tracker/vuforia_driver/cmake/: android.toolchain.arm64-v8a.cmake  android.toolchain.armeabi-v7a.cmake  android.toolchain.cmake  ios.toolchain.arm64.cmake  ios.toolchain.cmake  ios.toolchain.x86_64.cmake  macos.toolchain.x86_64.cmake  uwp.toolchain.ARM.cmake  uwp.toolchain.ARM64.cmake  uwp.toolchain.cmake  uwp.toolchain.x64.cmake  uwp.toolchain.x86.cmake
src/model_tracker/vuforia_driver/include/: Platform.h  RefDriverImpl.h  RefDriverImplData.h  RefImplSequencePlayer.h
src/model_tracker/vuforia_driver/src/: Format.cpp  Platform_Android.cpp  Platform_Apple.mm  Platform_UWP.cpp  RefDriverImpl.cpp  RefImplSequencePlayer.cpp
src/python/: classifier.py  mrlasertag.py  registercams.py
src/python/experiments/: apriltag_rgbd_capture.py  win32_shared_memory.py
src/python/networking/: message_handling.py  messages.py  serialization.py  tcp.py
src/python/vision/: apriltags.py  camera.py  classifier.py  height_map.py  object_detector.py  rgbd.py  vuforia.py
unity/LaserTag/Assets/: New Terrain.asset
unity/LaserTag/Assets/Materials/: Bricks 1.mat  Bricks.mat  CyanBeam.mat  LaserBeam.mat  RetroFloor_2.mat  Shades.mat  SolidWall.mat  WallCap.mat  Yellow.mat
unity/LaserTag/Assets/Materials/AprilTags/: Tag36_11_00000.mat
unity/LaserTag/Assets/Materials/Debug/: Blue.mat  Cyan.mat  Green.mat  Magenta.mat  Orange.mat  Pink.mat  Yellow.mat
unity/LaserTag/Assets/Materials/Objects/: Object1.mat  Object2.mat
unity/LaserTag/Assets/Materials/Particles/: CircularParticle.mat
unity/LaserTag/Assets/Models/: Quest2ControllerWithReferencePoints.fbx
unity/LaserTag/Assets/Plugins/Android/: AndroidManifest.xml.DISABLED
unity/LaserTag/Assets/Prefabs/AppPrefab/: HMDApp.prefab  SpectatorApp.prefab
unity/LaserTag/Assets/Prefabs/Environment/: BoundingBox.prefab  BrickWall.prefab  CityScape.prefab  Floor.prefab  Landscape.prefab  TronWall_1.prefab  TronWall_2.prefab  TronWall_3.prefab  TronWall_CenterPanel.prefab  TronWall_NormalPanel.prefab
unity/LaserTag/Assets/Prefabs/Game/: Avatar.prefab  Explosion.prefab  LaserBeam.prefab
unity/LaserTag/Assets/Prefabs/Game/Spaceships/: Blue.prefab  (+7 more)
unity/LaserTag/Assets/Prefabs/VRRegistration/: AprilTag_15.3cm2.prefab  CalibrationBoard_21.75in_x_27.75in.prefab  HMDControllerSample.prefab  OAKDControllerSample Variant.prefab  Quest2ControllerWithReferencePoints.prefab
unity/LaserTag/Assets/Scenes/: HMD.unity  Spectator.unity
unity/LaserTag/Assets/Scenes/Debug/: Debug_Registration.unity  Oculus_Controller_Analysis.unity  Test.unity  VR_Registration_Test.unity
unity/LaserTag/Assets/Scripts/: AppState.cs  MessageReceivingBehavior.cs  Messages.cs  NetworkManager.cs
unity/LaserTag/Assets/Scripts/Environment/: AprilTagVisualizer.cs  BoundingBoxes.cs  Walls.cs
unity/LaserTag/Assets/Scripts/Game/: AutoDestroy.cs  AvatarPoseTransmitter.cs  Avatars.cs  EditorMotionControls.cs  LaserBeam.cs  LaserEmitter.cs  Spaceship.cs  SpaceshipEmitter.cs
unity/LaserTag/Assets/Scripts/Net/: Handler.cs  IMessageHandler.cs  JSONMessageSubscriber.cs  Transport.cs  TransportJSONExtensions.cs  Utils.cs
unity/LaserTag/Assets/Scripts/PointCloud/: RGBDLoader.cs  RGBDViewer.cs
unity/LaserTag/Assets/Scripts/Registration/: DebugRegistration.cs  IOAKDRegistrationProvider.cs  ModelTrackingRegistration.cs
unity/LaserTag/Assets/Scripts/Utils/: Array2D.cs  Matrix4x4Extensions.cs  Vector3Extensions.cs
unity/LaserTag/Assets/Shaders/: UnlitTransparent.shader
unity/LaserTag/Assets/Shaders/Resources/: RGBDPointCloud.shader
unity/LaserTag/Assets/XR/: XRGeneralSettings.asset
unity/LaserTag/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
unity/RGBDPointCloudViewer/Assets/Materials/: Purple.mat
unity/RGBDPointCloudViewer/Assets/Prefabs/: Plane.prefab
unity/RGBDPointCloudViewer/Assets/Scenes/: Main.unity
unity/RGBDPointCloudViewer/Assets/Scripts/: AprilTagLoader.cs  CameraDolly.cs  Matrix4x4Extensions.cs  RGBDLoader.cs  RGBDViewer.cs  Tweens.cs
unity/RGBDPointCloudViewer/ProjectSettings/: ProjectSettings.asset
unity/VuforiaControllerTracker/Assets/: WSATestCertificate.pfx
unity/VuforiaControllerTracker/Assets/Resources/: VuforiaConfiguration.asset
unity/VuforiaControllerTracker/Assets/Scenes/: ControllerPoseTracker.unity
unity/VuforiaControllerTracker/Assets/Scripts/: InitCustomDriver.cs  PoseSamplerService.cs
unity/VuforiaControllerTracker/Assets/Scripts/Net/: BlockingRingBuffer.cs  Handler.cs  IMessageHandler.cs  JSONMessageSubscriber.cs  Transport.cs
unity/VuforiaControllerTracker/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+33 files in other folders)
